--- a/assets/rangeSelector.scss
+++ b/assets/rangeSelector.scss
@@ -1,11 +1,11 @@
 @import "../assets/mixins.scss";
 
 .form {
-    margin: 0 auto;
-    padding: 100px 30px 0;
+    // margin: 0 auto;
+    // padding: 100px 30px 0;
     text-align: center;
     @media (min-width: 800px) {
-      max-width: 60%;
+      max-width: 100%;
     }
   }
   
